apps/af-users-graph/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: af-users-graph
  namespace: cms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: af-users-graph
  template:
    metadata:
      labels:
        app: af-users-graph
    spec:
      nodeSelector: { "cms-af-prod": "true" }
      tolerations:
        - key: "hub.jupyter.org/dedicated"
          operator: "Equal"
          value: "cms-af"
          effect: "NoSchedule"
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - name: img-vol
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
      volumes:
      - name: img-vol
        persistentVolumeClaim:
          claimName: af-users-graph-pvc
      - name: nginx-config
        configMap:
          name: af-users-graph-nginx-config
