apps/af-users-graph/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: af-users-graph
  namespace: cms
spec:
  type: ClusterIP
  selector:
    app: af-users-graph
  ports:
  - port: 80
    targetPort: 80
