apps/af-users-graph/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: af-users-graph
  namespace: cms
spec:
  ingressClassName: public
  rules:
  - host: cms.geddes.rcac.purdue.edu
    http:
      paths:
      - path: /users-graph/purdue-af-registered-users.png
        pathType: Exact
        backend:
          service:
            name: af-users-graph
            port:
              number: 80
